--- a/index.html
+++ b/index.html
@@ -1,47 +1,41 @@
-
-
 <html>
+  
+<script src="https://apis.google.com/js/api.js" async defer></script>
+
+
 <head>
   <meta name="google-signin-client_id" content="716328353330-gfbund65tq4c9nnc2atkb7sh6fruhjfd.apps.googleusercontent.com">
+<head>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
   <script src="https://apis.google.com/js/api:client.js"></script>
   <script>
-    var googleUser = {};
-    var startApp = function() {
-      gapi.load('auth2', function(){
-        // Retrieve the singleton for the GoogleAuth library and set up the client.
-        auth2 = gapi.auth2.init({
-          client_id: '716328353330-gfbund65tq4c9nnc2atkb7sh6fruhjfd.apps.googleusercontent.com',
-          cookiepolicy: 'single_host_origin',
-          // Request scopes in addition to 'profile' and 'email'
-          //scope: 'additional_scope'
-        });
-        attachSignin(document.getElementById('customBtn'));
+  var googleUser = {};
+  var startApp = function() {
+    gapi.load('auth2', function(){
+      // Retrieve the singleton for the GoogleAuth library and set up the client.
+      auth2 = gapi.auth2.init({
+        client_id: '716328353330-gfbund65tq4c9nnc2atkb7sh6fruhjfd.apps.googleusercontent.com',
+        cookiepolicy: 'single_host_origin',
+        // Request scopes in addition to 'profile' and 'email'
+        //scope: 'additional_scope'
       });
-    };
+      attachSignin(document.getElementById('customBtn'));
+    });
+  };
 
-    function attachSignin(element) {
-      console.log(element.id);
-      auth2.attachClickHandler(element, {},
+  function attachSignin(element) {
+    console.log(element.id);
+    auth2.attachClickHandler(element, {},
         function(googleUser) {
           document.getElementById('name').innerText = "Signed in: " +
-            googleUser.getBasicProfile().getName();
+              googleUser.getBasicProfile().getName();
         }, function(error) {
           alert(JSON.stringify(error, undefined, 2));
         });
-    }
+  }
   </script>
   <style type="text/css">
-    #gSignInWrapper {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      height: 100vh;
-    }
-
     #customBtn {
-      margin: 20px;
       display: inline-block;
       background: white;
       color: #444;
@@ -51,16 +45,13 @@
       box-shadow: 1px 1px 1px grey;
       white-space: nowrap;
     }
-
     #customBtn:hover {
       cursor: pointer;
     }
-
     span.label {
       font-family: serif;
       font-weight: normal;
     }
-
     span.icon {
       background: url('/identity/sign-in/g-normal.png') transparent 5px 50% no-repeat;
       display: inline-block;
@@ -68,7 +59,6 @@
       width: 42px;
       height: 42px;
     }
-
     span.buttonText {
       display: inline-block;
       vertical-align: middle;
@@ -80,8 +70,10 @@
       font-family: 'Roboto', sans-serif;
     }
   </style>
-</head>
-<body>
+  </head>
+  <body>
+  <!-- In the callback, you would hide the gSignInWrapper element on a
+  successful sign in -->
   <div id="gSignInWrapper">
     <span class="label">Sign in with:</span>
     <div id="customBtn" class="customGPlusSignIn">
@@ -89,4 +81,7 @@
       <span class="buttonText">Google</span>
     </div>
   </div>
-  <div
+  <div id="name"></div>
+  <script>startApp();</script>
+</body>
+</html>"
