--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
+---
+layout: home
+---
+
 <html>
   
-<script src="https://apis.google.com/js/api.js" async defer></script>
-
-
 <head>
   <meta name="google-signin-client_id" content="716328353330-gfbund65tq4c9nnc2atkb7sh6fruhjfd.apps.googleusercontent.com">
-<head>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
   <script src="https://apis.google.com/js/api:client.js"></script>
   <script>
@@ -35,18 +35,28 @@
   }
   </script>
   <style type="text/css">
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
     #customBtn {
-      display: inline-block;
+      display: inline-flex;
+      justify-content: center;
+      align-items: center;
       background: white;
       color: #444;
       width: 190px;
+      height: 42px;
       border-radius: 5px;
       border: thin solid #888;
       box-shadow: 1px 1px 1px grey;
       white-space: nowrap;
+      cursor: pointer;
     }
     #customBtn:hover {
-      cursor: pointer;
+      background-color: #f2f2f2;
     }
     span.label {
       font-family: serif;
@@ -62,8 +72,8 @@
     span.buttonText {
       display: inline-block;
       vertical-align: middle;
-      padding-left: 42px;
-      padding-right: 42px;
+      padding-left: 10px;
+      padding-right: 10px;
       font-size: 14px;
       font-weight: bold;
       /* Use the Roboto font that is loaded in the <head> */
@@ -72,16 +82,15 @@
   </style>
   </head>
   <body>
-  <!-- In the callback, you would hide the gSignInWrapper element on a
-  successful sign in -->
   <div id="gSignInWrapper">
-    <span class="label">Sign in with:</span>
     <div id="customBtn" class="customGPlusSignIn">
       <span class="icon"></span>
-      <span class="buttonText">Google</span>
+      <span class="buttonText">Sign in with Google</span>
     </div>
   </div>
   <div id="name"></div>
+  <script src="https://apis.google.com/js/api.js" async defer></script>
   <script>startApp();</script>
 </body>
-</html>"
+</html>
+
