--- a/index.html
+++ b/index.html
@@ -1,35 +1,34 @@
-
 <html>
-  
 <head>
   <meta name="google-signin-client_id" content="716328353330-gfbund65tq4c9nnc2atkb7sh6fruhjfd.apps.googleusercontent.com">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
   <script src="https://apis.google.com/js/api:client.js"></script>
   <script>
-  var googleUser = {};
-  var startApp = function() {
-    gapi.load('auth2', function(){
-      // Retrieve the singleton for the GoogleAuth library and set up the client.
-      auth2 = gapi.auth2.init({
-        client_id: '716328353330-gfbund65tq4c9nnc2atkb7sh6fruhjfd.apps.googleusercontent.com',
-        cookiepolicy: 'single_host_origin',
-        // Request scopes in addition to 'profile' and 'email'
-        //scope: 'additional_scope'
-      });
-      attachSignin(document.getElementById('customBtn'));
-    });
-  };
-
-  function attachSignin(element) {
-    console.log(element.id);
-    auth2.attachClickHandler(element, {},
-        function(googleUser) {
-          document.getElementById('name').innerText = "Signed in: " +
-              googleUser.getBasicProfile().getName();
-        }, function(error) {
-          alert(JSON.stringify(error, undefined, 2));
+    var googleUser = {};
+    var startApp = function() {
+      gapi.load('auth2', function(){
+        // Retrieve the singleton for the GoogleAuth library and set up the client.
+        auth2 = gapi.auth2.init({
+          client_id: '716328353330-gfbund65tq4c9nnc2atkb7sh6fruhjfd.apps.googleusercontent.com',
+          cookiepolicy: 'single_host_origin',
+          // Request scopes in addition to 'profile' and 'email'
+          //scope: 'additional_scope'
         });
-  }
+        attachSignin(document.getElementById('customBtn'));
+      });
+    };
+
+    function attachSignin(element) {
+      console.log(element.id);
+      auth2.attachClickHandler(element, {},
+          function(googleUser) {
+            document.getElementById('name').innerText = "Signed in: " +
+                googleUser.getBasicProfile().getName();
+            document.getElementById('jekyllFrontMatter').innerText = "---\nlayout: home\n---";
+          }, function(error) {
+            alert(JSON.stringify(error, undefined, 2));
+          });
+    }
   </script>
   <style type="text/css">
     body {
@@ -77,17 +76,7 @@
       font-family: 'Roboto', sans-serif;
     }
   </style>
-  </head>
-  <body>
-  <div id="gSignInWrapper">
-    <div id="customBtn" class="customGPlusSignIn">
-      <span class="icon"></span>
-      <span class="buttonText">Sign in with Google</span>
-    </div>
-  </div>
-  <div id="name"></div>
-  <script src="https://apis.google.com/js/api.js" async defer></script>
-  <script>startApp();</script>
-</body>
-</html>
+</head>
+<body>
+<div
 
