--- a/index.html
+++ b/index.html
@@ -1,103 +1,3 @@
-{% for post in paginator.posts %}
-  <html>
-  
-<head>
-  <meta name="google-signin-client_id" content="716328353330-gfbund65tq4c9nnc2atkb7sh6fruhjfd.apps.googleusercontent.com">
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
-  <script src="https://apis.google.com/js/api:client.js"></script>
-  <script>
-  var googleUser = {};
-  var startApp = function() {
-    gapi.load('auth2', function(){
-      // Retrieve the singleton for the GoogleAuth library and set up the client.
-      auth2 = gapi.auth2.init({
-        client_id: '716328353330-gfbund65tq4c9nnc2atkb7sh6fruhjfd.apps.googleusercontent.com',
-        cookiepolicy: 'single_host_origin',
-        // Request scopes in addition to 'profile' and 'email'
-        //scope: 'additional_scope'
-      });
-      attachSignin(document.getElementById('customBtn'));
-    });
-  };
-
-  function attachSignin(element) {
-    console.log(element.id);
-    auth2.attachClickHandler(element, {},
-        function(googleUser) {
-          document.getElementById('name').innerText = "Signed in: " +
-              googleUser.getBasicProfile().getName();
-        }, function(error) {
-          alert(JSON.stringify(error, undefined, 2));
-        });
-  }
-  </script>
-  <style type="text/css">
-    body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    #customBtn {
-      display: inline-flex;
-      justify-content: center;
-      align-items: center;
-      background: white;
-      color: #444;
-      width: 190px;
-      height: 42px;
-      border-radius: 5px;
-      border: thin solid #888;
-      box-shadow: 1px 1px 1px grey;
-      white-space: nowrap;
-      cursor: pointer;
-    }
-    #customBtn:hover {
-      background-color: #f2f2f2;
-    }
-    span.label {
-      font-family: serif;
-      font-weight: normal;
-    }
-    span.icon {
-      background: url('/identity/sign-in/g-normal.png') transparent 5px 50% no-repeat;
-      display: inline-block;
-      vertical-align: middle;
-      width: 42px;
-      height: 42px;
-    }
-    span.buttonText {
-      display: inline-block;
-      vertical-align: middle;
-      padding-left: 10px;
-      padding-right: 10px;
-      font-size: 14px;
-      font-weight: bold;
-      /* Use the Roboto font that is loaded in the <head> */
-      font-family: 'Roboto', sans-serif;
-    }
-  </style>
-  </head>
-  <body>
-  <div id="gSignInWrapper">
-    <div id="customBtn" class="customGPlusSignIn">
-      <span class="icon"></span>
-      <span class="buttonText">Sign in with Google</span>
-    </div>
-  </div>
-  <div id="name"></div>
-  <script src="https://apis.google.com/js/api.js" async defer></script>
-  <script>startApp();</script>
-</body>
-</html>
-{% endfor %}
-
-<div class="pagination">
-  {% if paginator.previous_page %}
-    <a href="{{ paginator.previous_page_path }}" class="previous-page">&laquo; Previous</a>
-  {% endif %}
-  {% if paginator.next_page %}
-    <a href="{{ paginator.next_page_path }}" class="next-page">Next &raquo;</a>
-  {% endif %}
-</div>
-
+---
+layout: home
+---
